@@ -6,6 +6,7 @@
  * The Qt version is saved along with the toolbars state. This should avoid
    problems when upgrading Qt, as the toolbars info won't be used if the
    Qt version doesn't match.
+ * Added new action: dock_playlist.
 
 (2008-06-19)
  * Some fixes in the find subtitles dialog: 
